# Voice_Bot

./: README.md  package-lock.json  package.json
agentic_chatbot/: Dockerfile  README.md  README_MODULAR.md  app.py  audio_services.py  auth.py  clean.py  config.py  custom_endpoints.py  custom_supabase.py  document_service.py  llm_service.py  main.py  map.py  pyproject.toml  rag_service.py  requirements.txt  test.py  test2.py  tunnel.py  websocket_handler.py
agentic_chatbot/chroma_store/: chroma.sqlite3
agentic_chatbot/files/: graph_builder.py  llm_provider.py  main.py  schema.py
agentic_chatbot/qdrant_storage/: raft_state.json
agentic_chatbot/qdrant_storage/collections/documents/: config.json
agentic_chatbot/qdrant_storage/collections/documents/0/: newest_clocks.json  replica_state.json
agentic_chatbot/qdrant_storage/collections/documents/0/segments/0f340dcd-0d93-4b0d-8782-5589329022a8/: mutable_id_tracker.mappings  mutable_id_tracker.versions
agentic_chatbot/qdrant_storage/collections/documents/0/segments/0f340dcd-0d93-4b0d-8782-5589329022a8/payload_index/: IDENTITY  LOG  MANIFEST-000005  MANIFEST-000009  MANIFEST-000013  MANIFEST-000017  MANIFEST-000021
agentic_chatbot/qdrant_storage/collections/documents/0/segments/3293d86a-3122-4c3e-bdac-6deff6b378e1/: mutable_id_tracker.mappings  mutable_id_tracker.versions
agentic_chatbot/qdrant_storage/collections/documents/0/segments/3293d86a-3122-4c3e-bdac-6deff6b378e1/payload_index/: IDENTITY  LOG  MANIFEST-000005  MANIFEST-000009  MANIFEST-000013  MANIFEST-000017  MANIFEST-000021
agentic_chatbot/qdrant_storage/collections/documents/0/segments/af874535-a19f-40e2-baa4-068ece221d0b/: mutable_id_tracker.mappings  mutable_id_tracker.versions
agentic_chatbot/qdrant_storage/collections/documents/0/segments/b30f0adb-96ab-4fc5-aad5-023941b10d85/: mutable_id_tracker.mappings
agentic_chatbot/qdrant_storage/collections/documents/0/segments/b59d746f-f549-40c4-bb56-d1b0d1fc208b/: mutable_id_tracker.mappings  mutable_id_tracker.versions
frontend/: .env  package-lock.json  package.json
(+54 files in other folders)
