[project]
name = "agentic-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "dotenv>=0.9.9",
    "fastapi>=0.115.14",
    "groq>=0.29.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.5",
    "langchain-openai>=0.3.27",
    "langchain-tavily>=0.2.7",
    "langgraph>=0.5.1",
    "langsmith>=0.4.4",
    "openai>=1.93.0",
    "pdfplumber>=0.11.7",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.0.0",
    "uvicorn[standard]>=0.35.0",
]
