[project]
name = "agentic-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "fastapi>=0.115.14",
    "groq>=0.29.0",
    "kokoro>=0.9.4",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.5",
    "langchain-huggingface>=0.3.0",
    "langchain-openai>=0.3.27",
    "langchain-qdrant>=0.2.0",
    "langchain-tavily>=0.2.7",
    "langgraph>=0.5.1",
    "langsmith>=0.4.4",
    "murf>=2.0.1",
    "openai>=1.93.0",
    "pdfplumber>=0.11.7",
    "pip>=25.1.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.0.0",
    "soundfile>=0.13.1",
    "supabase>=2.17.0",
    "uvicorn[standard]>=0.35.0",
]
